fix: env tippy-box align fix

--- a/packages/hoppscotch-app/assets/scss/styles.scss
+++ b/packages/hoppscotch-app/assets/scss/styles.scss
@@ -136,6 +136,7 @@ a {
   @apply truncate;
   @apply shadow;
   @apply leading-body;
+  @apply items-center;
   font-size: 86%;
 
   kbd {
